[gd_scene load_steps=3 format=3 uid="uid://crfr1tfr8e02m"]

[ext_resource type="Script" path="res://scripts/events/event_haunting.gd" id="1_h776i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x32i8"]
radius = 107.005

[node name="EventHaunting" type="Area2D"]
collision_layer = 128
collision_mask = 4
script = ExtResource("1_h776i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x32i8")
debug_color = Color(0.843137, 0.352941, 0.364706, 0.419608)

[node name="NightTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="." to="." method="trigger_haunting"]
[connection signal="timeout" from="NightTimer" to="." method="_on_night_timer_timeout"]
